messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-blue
  labels:
    app: django-messaging
    service-type: blue
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-messaging
    version: blue
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-green
  labels:
    app: django-messaging
    service-type: green
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-messaging
    version: green
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-active
  labels:
    app: django-messaging
    service-type: active
  annotations:
    blue-green.deployment/current-version: "blue"
    blue-green.deployment/strategy: "blue-green"
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-messaging
    version: blue  # Initially points to blue
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-preview
  labels:
    app: django-messaging
    service-type: preview
  annotations:
    blue-green.deployment/purpose: "preview-new-version"
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30001
    protocol: TCP
    name: http
  selector:
    app: django-messaging
    version: green  # For testing green deployment
